--- a/src/styles/slideshow.css
+++ b/src/styles/slideshow.css
@@ -3,7 +3,7 @@
   position: relative;
   margin: 0;
   padding: 1rem 2rem;
-  background: white;
+  background: var(--background-white);
   border-bottom: 1px solid var(--border-color);
 }
 
@@ -21,7 +21,7 @@
 
 .prev-button, .next-button {
   background: var(--secondary-color);
-  color: white;
+  color: var(--text-color);
   border: none;
   border-radius: 50%;
   width: 40px;
